--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 .wrapper {
-  width: 450px;
+  width: 550px;
   padding: 10px 20px;
   overflow: hidden;
   position: relative;
@@ -112,22 +112,34 @@ body {
   cursor: pointer;
 }
 
-.img-area {
-  width: 60%;
-  aspect-ratio: 1/1;
-  margin: auto;
+.img-slider {
   overflow: hidden;
-  margin-top: 15px;
-  border-radius: 50%;
-  -moz-box-shadow: 0px 6px 12px var(--lightbshadow);
-  -webkit-box-shadow: 0px 6px 12px var(--lightbshadow);
-  box-shadow: 0px 6px 12px var(--lightbshadow);
+  width: 100%;
+  position: relative;
+  padding: 20px 0;
+}
+
+.img-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+
+.img-area {
+  flex: 1 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-area img {
+  max-width: 300px;
+  max-height: 300px;
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 6px 12px var(--lightbshadow);
 }
 
 .song-details {
@@ -224,7 +236,6 @@ body {
 
 .volume {
   margin: 30px 0 15px 0;
-  /* position: absolute; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,14 +247,14 @@ body {
 }
 
 .volume i {
-  cursor: pointer;
+  cursor: default;
   padding: 8px 12px;
   background: #ffffff;
 }
 
-.volume i:hover {
+/* .volume i:hover {
   background: rgba(109, 109, 109, 0.1);
-}
+} */
 
 .volume #volume_show {
   padding: 8px 12px;
@@ -290,8 +301,7 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-text-fill-color: transparent;
 }
 
-.controls i:nth-child(2),
-.controls i:nth-child(4) {
+.controls i.icon-large {
   font-size: 43px;
 }
 
@@ -344,7 +354,6 @@ input[type="range"]::-webkit-slider-thumb {
   bottom: -55%;
   opacity: 0;
   pointer-events: none;
-  /* z-index: 5; */
   padding: 15px 30px;
   border-radius: 15px;
   box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1);
@@ -375,6 +384,18 @@ input[type="range"]::-webkit-slider-thumb {
 .header #close {
   font-size: 22px;
   color: var(--lightblack);
+}
+
+.more-music-wrap {
+  position: relative;
+}
+.descriptive-text {
+  position: absolute;
+  font-size: 10px;
+  text-align: center;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .music-list ul {
@@ -421,4 +442,16 @@ ul li .audio-duration {
   .wrapper {
     padding: 25px 30px;
   }
+}
+
+/* Slider controls */
+.slider-controls {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-50%);
+  z-index: 1;
 }
