--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
   border-radius: 15px;
   background: var(--white);
   box-shadow: 0px 6px 15px var(--lightbshadow);
+  margin: 20px auto;
 }
 
 .wrapper i {
@@ -130,6 +131,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 60px;
 }
 
 .img-area img {
@@ -434,16 +436,6 @@ ul li .audio-duration {
   font-size: 16px;
 }
 
-@media screen and (min-width: 768px) {
-  .player {
-    width: 70%;
-  }
-
-  .wrapper {
-    padding: 25px 30px;
-  }
-}
-
 /* Slider controls */
 .slider-controls {
   position: absolute;
@@ -454,4 +446,19 @@ ul li .audio-duration {
   justify-content: space-between;
   transform: translateY(-50%);
   z-index: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .player {
+    width: 70%;
+  }
+
+  .wrapper {
+    padding: 25px 30px;
+    margin: 0px;
+  }
+
+  .img-area {
+    padding: 0;
+  }
 }
